<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="br.com.guilhermeruiz.fantasmasfilosoficos.MainActivity" >

    <LinearLayout
        android:id="@+id/headerBarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/header_bar_background"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/philosopher_white" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/menuLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/ghosts"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aristotleTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/aristotle"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aristotleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/aristotleText"
                android:textColor="#000"
                android:textSize="15dp" />

            <!-- *************************************************** -->

            <TextView
                android:id="@+id/kantTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/kant"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kantTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/kantText"
                android:textColor="#000"
                android:textSize="15dp" />

            <!-- *************************************************** -->

            <TextView
                android:id="@+id/platoTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/plato"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/platoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/platoText"
                android:textColor="#000"
                android:textSize="15dp" />

            <!-- *************************************************** -->

            <TextView
                android:id="@+id/socratesTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/socrates"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/socratesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/socratesText"
                android:textColor="#000"
                android:textSize="15dp" />

            <Button
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_menu" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>